@@ -1,5 +1,13 @@
 2007-10-13  Vitaly Alexeev <tishka92@yahoo.com>
 
+		* gameswf/gameswf_action.cpp
+		* gameswf/gameswf_action.h
+		* gameswf/gameswf_test_ogl.cpp
+		Added gameSWF extension that 
+		allow pass the user bootup options to Flash (through _global._bootup)
+
+2007-10-13  Vitaly Alexeev <tishka92@yahoo.com>
+
 		* base/tu_loadlib.cpp
 		* base/tu_loadlib.h
 		* gameswf/gameswf_freetype.cpp
